--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 ﻿﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="stockmarket">
 
 <head>
 
@@ -13,7 +13,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 
-<body ng-app="stockmarket" ng-controller="MarketController as ctrl">
+<body ng-controller="MarketController as ctrl">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -161,7 +161,7 @@
             </div>
         </div>
         <!-- /.row -->
-        <!-- Portfolio Section -->
+        <!-- Section1 -->
         <div class="row mystyle">
 
             <div class="col-lg-12">
