--- a/src/main/webapp/admin/reports/index.html
+++ b/src/main/webapp/admin/reports/index.html
@@ -26,7 +26,7 @@
         <!-- /.container -->
     </nav>
 
-    <!--<div class="navbar-inverse navbar" ng-show="notification" style="background-color: #555">
+    <div class="navbar-inverse navbar" ng-show="notification" style="background-color: #555">
 
         <div class="navbar-header navbar-right">
             <a href="" ng-click="ctrl.closeNotificationBar()"> <div class="navbar-brand">close</div> </<a>
@@ -34,7 +34,7 @@
         <div class="navbar-header">
             <div class="navbar-brand">{{notification}}</div>
         </div>
-    </div>-->
+    </div>
     <!-- Header Carousel -->
     <header id="myCarousel" class="carousel slide">
 
@@ -82,7 +82,38 @@
                 </h2>
             </div>
 
-            <div ng-repeat="symbol in symbolsQ | orderBy:'name'">
+
+
+            <table class="table table-striped table-bordered table-hover table-condensed">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>خریدار</th>
+                        <th>فروشنده</th>
+                        <th>نام سهام</th>
+                        <th>مقدار سهام</th>
+                        <th>قیمت</th>
+                        <th>نوع درخواست</th>
+                        <th>زمان ثبت</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="transaction in transactions">
+                        <td>{{transaction.TR_ID}}</td>
+                        <td>{{transaction.BUYER}}</td>
+                        <td>{{transaction.SELLER}}</td>
+                        <td>{{transaction.INSTRUMENT}}</td>
+                        <td>{{transaction.QUANTITY}}</td>
+                        <td>{{transaction.PRICE}}</td>
+                        <td>{{transaction.TYPEOFTRADE}}</td>
+                        <td>{{transaction.TIME}}</td>
+                    </tr>
+                    
+                </tbody>
+            </table>
+
+
+         <!--   <div ng-repeat="transaction in transactions | orderBy:'name'">
                 <div class="panel-group">
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -115,7 +146,9 @@
                     </div>
                 </div>
 
-            </div>
+            </div>-->
+
+
         </div>
         <!-- /.row -->
         <!-- Footer -->
